<resources>
    <string name="app_name">ChatApp</string>
    <string name="defaultloading">Please wait...</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="anonymous">Anonymous Tester</string>
    <string name="email">heinz-georg.fiedler@example.com</string>
    <string name="empty_list">List is currently empty!</string>
    <string name="title_activity_user_detail">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="data">data</string>
    <string name="chat_inactive">Chat System Inactive!</string>
    <string name="chat">Chat</string>
    <string name="address">4118, Schulstraße, Fellbach, Rheinland-Pfalz, Germany</string>
    <string name="phone">0700-3090279</string>
    <string name="dob">1974-03-12T21:15:08.878Z</string>
    <string name="full_detail">Full Detail</string>
</resources>
