<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.UserDetailActivity"
    tools:showIn="@layout/activity_user_detail">


    <LinearLayout
        android:padding="@dimen/medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAddress"
            android:paddingTop="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            style="@style/textview"
            android:text="@string/address"/>

        <View
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/light_grey"/>
        <TextView
            android:id="@+id/txtFullName"
            android:padding="@dimen/medium"
            style="@style/textview"
            android:drawableLeft="@drawable/profile"
            tools:text="@string/app_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/light_grey"/>
        <TextView
            android:id="@+id/txtPhone"
            android:padding="@dimen/medium"
            style="@style/textview"
            android:drawableLeft="@drawable/phone"
            tools:text="@string/phone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/light_grey"/>
        <TextView
            android:id="@+id/txtEmail"
            android:padding="@dimen/medium"
            style="@style/textview"
            android:drawableLeft="@drawable/mail"
            tools:text="@string/email"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/light_grey"/>
        <TextView
            android:id="@+id/txtDob"
            android:padding="@dimen/medium"
            style="@style/textview"
            android:drawableLeft="@drawable/calender"
            tools:text="@string/dob"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/light_grey"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>